# linux-sgx-remoteattestation

./: .gitignore  CMakeLists.txt  GeneralSettings-example.h
Application/: Makefile
Application/isv_app/: isv_app.cpp
Application/isv_enclave/: isv_enclave.cpp  isv_enclave.edl
MessageHandler/: MessageHandler.cpp  MessageHandler.h
Networking/: AbstractNetworkOps.cpp  AbstractNetworkOps.h  NetworkManager.cpp  NetworkManagerClient.cpp  NetworkManagerServer.cpp  NetworkManagerServer.h  Server.cpp  Server.h  Session.cpp
ServiceProvider/isv_app/: VerificationManager.cpp  VerificationManager.h  isv_app.cpp
ServiceProvider/service_provider/: ServiceProvider.cpp  ServiceProvider.h
WebService/: WebService.cpp
